Started adding kafka configurations for async consumption
