# pizza-delivery-ms/src/main/java/com/example/delivery/persistence/dto/DeliveryDTO.java
@@ -1,16 +1,16 @@
-package com.example.delivery.persistence.dto;
-
-import lombok.Data;
-import org.springframework.data.annotation.Id;
-import org.springframework.data.mongodb.core.mapping.Document;
-
-@Data
-@Document(collection = "${spring.data.mongodb.collection-name}")
-public class DeliveryDTO {
-//    @Id
-//    private String deliveryId;
-    private Long orderId;
-    private String name;
-    private Double price;
-    private String status;
-}
+//package com.example.delivery.persistence.dto;
+//
+//import lombok.Data;
+//import org.springframework.data.annotation.Id;
+//import org.springframework.data.mongodb.core.mapping.Document;
+//
+//@Data
+//@Document(collection = "${spring.data.mongodb.collection-name}")
+//public class DeliveryDTO {
+////    @Id
+////    private String deliveryId;
+//    private Long orderId;
+//    private String name;
+//    private Double price;
+//    private String status;
+//}
