# pizza-delivery-ms/src/main/java/com/example/delivery/resources/rest/DeliveryRest.java
@@ -1,7 +1,9 @@
 package com.example.delivery.resources.rest;
 
 import com.example.delivery.resources.controller.DeliveryController;
+import com.example.order.api.external.GetDeliveriesApi;
 import com.example.order.api.external.GetDeliveryDetailsApi;
+import com.example.order.model.external.DeliveriesResponse;
 import com.example.order.model.external.DeliveryDetailsRequest;
 import com.example.order.model.external.DeliveryDetailsResponse;
 import org.springframework.http.HttpStatus;
@@ -13,7 +15,7 @@ import org.springframework.web.bind.annotation.RestController;
 @RestController
 @CrossOrigin(origins = "${cros.origins}")
 @RequestMapping("delivery")
-public class DeliveryRest implements GetDeliveryDetailsApi {
+public class DeliveryRest implements GetDeliveryDetailsApi, GetDeliveriesApi {
 
     protected DeliveryController deliveryController;
 
@@ -23,17 +25,21 @@ public class DeliveryRest implements GetDeliveryDetailsApi {
 
     @Override
     public ResponseEntity<DeliveryDetailsResponse> getDeliveryDetailsPost(DeliveryDetailsRequest deliveryDetailsRequest) {
-        if (validateRequest(deliveryDetailsRequest)) return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+        if (!isRequestValid(deliveryDetailsRequest)) return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
 
         return new ResponseEntity<>(deliveryController.getDeliveryDetails(deliveryDetailsRequest.getOrderId()), HttpStatus.OK);
     }
 
+    @Override
+    public ResponseEntity<DeliveriesResponse> getDeliveriesGet() {
+        return new ResponseEntity<>(deliveryController.getDeliveries(), HttpStatus.OK);
+    }
 
-    private boolean validateRequest(DeliveryDetailsRequest deliveryDetailsRequest) {
+    private boolean isRequestValid(DeliveryDetailsRequest deliveryDetailsRequest) {
         if (deliveryDetailsRequest == null || deliveryDetailsRequest.getOrderId() == null
                 || deliveryDetailsRequest.getOrderId() <= 0) {
-            return true;
+            return false;
         }
-        return false;
+        return true;
     }
 }
